TestParallelHeapSizeFlags fails with unexpected heap size

XMLWordPrintable

    • gc
    • b33
    • generic
    • solaris

        Running the test on sparcv9 fails with this exception:
        java.lang.RuntimeException: Heap has 8388608 bytes, expected to be less than 4194304
        at TestMaxHeapSizeTools.checkGenMaxHeapSize(TestMaxHeapSizeTools.java:254)
        at TestMaxHeapSizeTools.checkGenMaxHeapErgo(TestMaxHeapSizeTools.java:109)
        at TestParallelHeapSizeFlags.main(TestParallelHeapSizeFlags.java:46)
        at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
        at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.lang.reflect.Method.invoke(Method.java:483)
        at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
        at java.lang.Thread.run(Thread.java:744)

              Assignee:
              Erik Helin
              Reporter:
              Erik Helin
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: