8049864: TestParallelHeapSizeFlags fails with unexpected heap size

Reviewed-by: sjohanss, jmasa